--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -5,9 +5,13 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  @media screen and (max-width: 723px) {
+    flex-wrap: wrap-reverse;
+  }
+
   .row {
     h1 {
-      background: linear-gradient(-45deg, #623cea, #6954b6, #096ffe, #096ffe);
+      background: linear-gradient(-80deg, #b23fe0, #ff00dd, #096ffe, #096ffe);
       background-size: 300%;
       font-family: Arial, Helvetica, sans-serif;
       font-weight: 900;
@@ -64,8 +68,8 @@
         margin: 10px 90px;
         transform: rotate(-2deg);
         @media screen and (max-width: 385px) {
-          margin-top: 200px;
-          margin: 0;
+          margin-top: 0px;
+          margin: 0px;
         }
       }
       .slider {
@@ -102,12 +106,11 @@
 
 @media screen and (max-width: 1024px) {
   .container {
-    margin-top: 20px;
     .row {
       text-align: center;
       margin: 0px;
       h1 {
-        background: linear-gradient(-45deg, #623cea, #6954b6, #096ffe, #096ffe);
+        background: linear-gradient(-50deg, #b23fe0, #ff00dd, #096ffe, #096ffe);
         background-size: 300%;
         font-family: Arial, Helvetica, sans-serif;
         font-weight: 900;
